--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-23 06:48+0000\n"
+"PO-Revision-Date: 2013-09-23 21:25+0000\n"
 "Last-Translator: Dar_Kuntu <ZAck13@gmx.at>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1379918903.0\n"
+"X-POOTLE-MTIME: 1379971547.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -24,12 +24,11 @@ msgstr "Bevorzugte Anwendungen"
 
 #: ../data/lxshortcut.desktop.in.h:1
 msgid "Create new or change existing desktop entry"
-msgstr "Desktop-Datei Eintrag erstellen oder existierenden ändern"
+msgstr "Verknüpfungs-Editor"
 
 #: ../data/lxshortcut.desktop.in.h:2
-#, fuzzy
 msgid "Shortcut Editor"
-msgstr "Verknüpfungen"
+msgstr "Verknüpfungs-Editor"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>C_ommand line to execute:</b>"
@@ -522,12 +521,12 @@ msgstr "Keine vorgegebene Anwendung für MIME-Typ %s festgelegt."
 #: ../src/base/fm-file-launcher.c:272
 #, c-format
 msgid "Cannot set working directory to '%s': %s"
-msgstr ""
+msgstr "Arbeitsverzeichnis setzen zu '%s': %s fehlgeschlagen"
 
 #: ../src/base/fm-file-launcher.c:318
 #, c-format
 msgid "Could not determine content type of file '%s' to launch it"
-msgstr ""
+msgstr "Der Dateityp von '%s' konnte nicht bestimmt werden um es auszuführen"
 
 #: ../src/base/fm-file-launcher.c:363 ../src/base/fm-templates.c:1066
 #, c-format
@@ -548,11 +547,11 @@ msgstr "Papierkorb"
 
 #: ../src/base/fm-mime-type.c:86
 msgid "shortcut to URI"
-msgstr ""
+msgstr "Verknüpfung zu URI"
 
 #: ../src/base/fm-templates.c:1016
 msgid "fm_template_create_file: invalid argument"
-msgstr ""
+msgstr "fm_template_create_file: Ungültiges Argument"
 
 #: ../src/base/fm-terminal.c:248
 msgid "No terminal emulator is set in libfm config"
@@ -597,7 +596,7 @@ msgstr "TiB"
 #: ../src/base/fm-utils.c:572
 #, c-format
 msgid "The URI subpath '%s' contains invalid escaped characters"
-msgstr ""
+msgstr "Der URI Unterpfad '%s' beinhaltet ungültige Maskierungszeichen"
 
 #: ../src/extra/fm-xml-file.c:205
 #, c-format
