Commit from LXDE Pootle server by user Dar_Kuntu.: 303 of 379 strings translated (30 fuzzy).

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-23 21:25+0000\n"
+"PO-Revision-Date: 2013-09-23 21:32+0000\n"
 "Last-Translator: Dar_Kuntu <ZAck13@gmx.at>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1379971547.0\n"
+"X-POOTLE-MTIME: 1379971944.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -236,9 +236,8 @@ msgid "File Properties"
 msgstr "Dateieigenschaften"
 
 #: ../data/ui/file-prop.glade.h:21
-#, fuzzy
 msgid "Hidden file"
-msgstr "_Videodateien"
+msgstr "Versteckte Datei"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Icon of the file in folder view"
@@ -509,9 +508,9 @@ msgid "Preparing..."
 msgstr "Vorbereiten…"
 
 #: ../src/base/fm-file-launcher.c:85
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid desktop entry file: '%s'"
-msgstr "Ungültiger Dateiname %s"
+msgstr "Ungültige .desktop-Datei: '%s'"
 
 #: ../src/base/fm-file-launcher.c:197
 #, fuzzy, c-format
