--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-23 21:32+0000\n"
+"PO-Revision-Date: 2013-09-29 12:07+0000\n"
 "Last-Translator: Dar_Kuntu <ZAck13@gmx.at>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1379971944.0\n"
+"X-POOTLE-MTIME: 1380456427.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -183,9 +183,8 @@ msgid "<b>Last Modification:</b>"
 msgstr "<b>Geändert:</b>"
 
 #: ../data/ui/file-prop.glade.h:8
-#, fuzzy
 msgid "<b>Last Permissions Change:</b>"
-msgstr "<b>LetzterZugriff:</b>"
+msgstr "<b>Letzte Berechtigungsänderungen:</b>"
 
 #: ../data/ui/file-prop.glade.h:9
 msgid "<b>Location:</b>"
@@ -513,9 +512,9 @@ msgid "Invalid desktop entry file: '%s'"
 msgstr "Ungültige .desktop-Datei: '%s'"
 
 #: ../src/base/fm-file-launcher.c:197
-#, fuzzy, c-format
+#, c-format
 msgid "No default application is set to launch URIs %s://"
-msgstr "Keine vorgegebene Anwendung für MIME-Typ %s festgelegt."
+msgstr "Keine festgelegte Anwendung für MIME-Typ %s://"
 
 #: ../src/base/fm-file-launcher.c:272
 #, c-format
@@ -557,9 +556,8 @@ msgid "No terminal emulator is set in libfm config"
 msgstr "Kein Terminalemulator ist in der Konfiguration von libfm festgelegt"
 
 #: ../src/base/fm-thumbnailer.c:283
-#, fuzzy
 msgid "Invalid description of thumbnailer application"
-msgstr "Ungültiger Menüordner"
+msgstr "Ungültige Beschreibung von Vorschaubilder Anwendung"
 
 #: ../src/base/fm-utils.c:136
 msgid "kB"
@@ -600,7 +598,7 @@ msgstr "Der URI Unterpfad '%s' beinhaltet ungültige Maskierungszeichen"
 #: ../src/extra/fm-xml-file.c:205
 #, c-format
 msgid "Duplicate handler for tag <%s>"
-msgstr ""
+msgstr "Duplikat Funktion für Kennzeichen <%s>"
 
 #: ../src/extra/fm-xml-file.c:299
 #, c-format
